# alteryx-mcp

./: README.md  pyproject.toml  real_example.yxmd  test_row_limits.yxmd  test_workflow.yxmd
alteryx_mcp/: __init__.py  alteryx_mcp.py  server.py
